--- a/index.html
+++ b/index.html
@@ -15,132 +15,110 @@
         body, html {
             width: 100%;
             height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #f3f4f6;
+            color: #333;
             overflow: hidden;
-            background-color: #000;
-            color: #fff;
         }
         .page {
+            width: 100%;
+            height: 100%;
             display: none;
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            text-align: center;
             padding: 20px;
-            width: 100%;
-            height: 100%;
         }
         .active {
             display: flex;
         }
         h1 {
             font-size: 2rem;
-            color: #fff;
-            margin-bottom: 2rem;
+            color: #0056b3;
+            margin-bottom: 1rem;
+            text-align: center;
         }
         label {
             font-size: 1.5rem;
             margin-bottom: 1rem;
-            color: #ccc;
+            color: #333;
+            text-align: center;
             width: 100%;
         }
         select, input, button {
             font-size: 1.2rem;
             margin: 0.5rem 0;
             padding: 10px 15px;
-            width: 90%;
-            max-width: 350px;
+            width: 80%;
+            max-width: 400px;
             border-radius: 8px;
             border: none;
             outline: none;
+            transition: all 0.3s ease;
             text-align: center;
         }
         select, input {
-            background-color: #333;
-            color: #fff;
+            background-color: #e0e0e0;
+            color: #333;
         }
         button {
-            background-color: #ff007f;
+            background-color: #0056b3;
             color: #fff;
             font-weight: bold;
             cursor: pointer;
         }
         button:hover {
-            background-color: #ff3366;
+            background-color: #003e8a;
         }
-        /* Dynamic Island Style with Round Progress */
+        /* Dynamic Island Styling */
         .dynamic-island {
             position: absolute;
             top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 35px;
+            background-color: #000000aa;
+            color: #fff;
+            width: 90%;
+            max-width: 400px;
+            height: 60px;
+            border-radius: 30px;
+            padding: 10px 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             z-index: 10;
         }
+        .dynamic-island .exercise-name {
+            font-size: 1.2rem;
+            margin-right: 10px;
+        }
+        .dynamic-island .reps-count {
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
         .circle-progress {
-            position: relative;
-            width: 80px;
-            height: 80px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: conic-gradient(#0056b3 0% 0%, #e0e0e0 0% 100%);
+            margin-left: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
-        }
-        .circle-progress svg {
-            transform: rotate(-90deg);
-            width: 100%;
-            height: 100%;
-        }
-        .circle-progress circle {
-            fill: none;
-            stroke-width: 10;
-        }
-        .circle-background {
-            stroke: #333;
-        }
-        .circle-foreground {
-            stroke: #ff007f;
-            stroke-dasharray: 251.2;
-            transition: stroke-dashoffset 0.3s;
-        }
-        .reps-count {
-            position: absolute;
-            font-size: 1.2rem;
-            font-weight: bold;
+            font-size: 1rem;
             color: #fff;
         }
-        .island-content {
-            margin-left: 15px;
-            text-align: left;
-        }
-        .island-content h2 {
-            font-size: 1.4rem;
-            margin: 0;
-            color: #fff;
-        }
-        /* Rest Timer Styling */
-        .rest-timer {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 3rem;
-            color: #ff007f;
-            display: none;
-            text-align: center;
-        }
-        /* Full-screen Video Styling */
+        /* Camera Page Styling */
         #video-container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            position: relative;
+            width: 90%;
+            max-width: 400px;
+            aspect-ratio: 3/4;
+            margin-top: 80px;
+            border-radius: 15px;
             overflow: hidden;
-            z-index: 1;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
         video, canvas {
             position: absolute;
@@ -148,31 +126,32 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
         }
-        .completed-message {
-            font-size: 2rem;
-            color: #28a745;
-            margin-bottom: 20px;
+        #status {
+            font-size: 1.5rem;
+            color: #0056b3;
             text-align: center;
+            margin-top: 10px;
         }
-        .home-button {
-            font-size: 1rem;
-            padding: 10px 20px;
-            background-color: #ff007f;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
+        /* Progress Bar Styling */
+        .progress-container {
+            width: 90%;
+            max-width: 400px;
+            height: 10px;
+            background-color: #e0e0e0;
+            border-radius: 5px;
+            overflow: hidden;
+            margin-top: 10px;
         }
-        .home-button:hover {
-            background-color: #ff3366;
+        .progress-bar {
+            height: 100%;
+            background-color: #0056b3;
+            width: 0%;
+            transition: width 0.3s ease;
         }
     </style>
 </head>
 <body>
-    <!-- Page 1: Exercise Selection -->
     <div id="question1" class="page active">
         <h1>Select Your Exercise</h1>
         <label for="exercise">What exercise would you like to do?</label>
@@ -205,30 +184,24 @@
         <button onclick="startExercise()">Start Exercise</button>
     </div>
 
-    <!-- Page 2: Exercise Tracking with Full-Screen Video -->
+    <!-- Exercise Tracking Page with Dynamic Island -->
     <div id="exercisePage" class="page">
+        <div class="dynamic-island">
+            <span class="exercise-name" id="exerciseName">Squats</span>
+            <div class="circle-progress" id="progressCircle">0</div>
+            <span class="reps-count">Reps</span>
+        </div>
         <div id="video-container">
             <video id="webcam" autoplay playsinline></video>
             <canvas id="output"></canvas>
         </div>
-        <!-- Dynamic Island with Round Progress Bar -->
-        <div class="dynamic-island" id="counter">
-            <div class="circle-progress">
-                <svg>
-                    <circle class="circle-background" cx="40" cy="40" r="40"></circle>
-                    <circle class="circle-foreground" cx="40" cy="40" r="40" style="stroke-dashoffset: 251.2;"></circle>
-                </svg>
-                <div class="reps-count" id="reps-count">0</div>
-            </div>
-            <div class="island-content">
-                <h2 id="exercise-name"></h2>
-            </div>
+        <p id="status"></p>
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar"></div>
         </div>
-        <!-- Rest Timer Display -->
-        <div class="rest-timer" id="rest-timer">Rest: <span id="timer">0</span>s</div>
     </div>
 
-    <!-- Page 3: Exercise Completed -->
+    <!-- Exercise Completed Page -->
     <div id="completedPage" class="page">
         <div class="completed-message">EXERCISE COMPLETED</div>
         <button class="home-button" onclick="goToHome()">Go to Home</button>
@@ -237,6 +210,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
+
     <script>
         function nextQuestion(current, next) {
             document.getElementById(current).classList.remove('active');
@@ -246,37 +220,44 @@
         const videoElement = document.getElementById('webcam');
         const canvasElement = document.getElementById('output');
         const canvasCtx = canvasElement.getContext('2d');
-        const counterElement = document.getElementById('reps-count');
-        const exerciseNameElement = document.getElementById('exercise-name');
-        const progressCircle = document.querySelector('.circle-foreground');
-        const restTimerElement = document.getElementById('rest-timer');
-        const restCountdown = document.getElementById('timer');
+        const exerciseNameElement = document.getElementById('exerciseName');
+        const progressCircle = document.getElementById('progressCircle');
+        const progressBar = document.getElementById('progress-bar');
 
-        let exercise, sets, repsPerSet, currentReps, currentSet, restTime, stage;
-        let isResting = false; // Flag to control exercise tracking during rest time
-        const circleCircumference = 251.2; // Circumference based on radius in SVG (r=40)
+        let exercise, sets, repsPerSet, totalReps, totalRepsCompleted, currentSet, currentReps, stage;
+        let restTimeBetweenSets;
+        let isResting = false;
+
+        function resetExercise() {
+            exercise = "";
+            sets = 0;
+            repsPerSet = 0;
+            totalReps = 0;
+            totalRepsCompleted = 0;
+            currentSet = 1;
+            currentReps = 0;
+            stage = null;
+            isResting = false;
+            progressCircle.innerText = "0";
+            progressBar.style.width = "0%";
+        }
 
         function startExercise() {
             exercise = document.getElementById('exercise').value;
             sets = parseInt(document.getElementById('sets').value);
             repsPerSet = parseInt(document.getElementById('reps').value);
-            restTime = parseInt(document.getElementById('restTime').value);
-            currentReps = 0;
+            restTimeBetweenSets = parseInt(document.getElementById('restTime').value);
+            totalReps = sets * repsPerSet;
+            totalRepsCompleted = 0;
             currentSet = 1;
+            currentReps = 0;
             stage = null;
-            isResting = false;
 
-            exerciseNameElement.innerText = exercise.charAt(0).toUpperCase() + exercise.slice(1);
             document.getElementById('question4').classList.remove('active');
             document.getElementById('exercisePage').classList.add('active');
 
+            exerciseNameElement.innerText = exercise.charAt(0).toUpperCase() + exercise.slice(1);
             initializeExerciseTracking();
-        }
-
-        function updateProgress() {
-            const progress = (currentReps / repsPerSet) * circleCircumference;
-            progressCircle.style.stroke-dashoffset = circleCircumference - progress;
-            counterElement.innerText = currentReps;
         }
 
         function initializeExerciseTracking() {
@@ -322,8 +303,6 @@
         }
 
         function onPoseResults(results) {
-            if (isResting) return; // Skip tracking during rest period
-
             canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
             if (results.poseLandmarks) {
                 drawConnectors(canvasCtx, results.poseLandmarks, POSE_CONNECTIONS,
@@ -331,12 +310,12 @@
                 drawLandmarks(canvasCtx, results.poseLandmarks,
                               { color: '#FF0000', lineWidth: 2 });
 
-                if (exercise === "squats") {
-                    trackSquats(results.poseLandmarks);
-                } else if (exercise === "curls") {
+                if (exercise === "curls") {
                     trackCurls(results.poseLandmarks);
                 } else if (exercise === "jumpingjacks") {
                     trackJumpingJacks(results.poseLandmarks);
+                } else if (exercise === "squats") {
+                    trackSquats(results.poseLandmarks);
                 }
             }
         }
@@ -348,19 +327,6 @@
             return angle;
         }
 
-        function trackSquats(landmarks) {
-            const hip = landmarks[24];
-            const knee = landmarks[26];
-            const ankle = landmarks[28];
-            const angle = calculateAngle(hip, knee, ankle);
-
-            if (angle > 160) stage = "up";
-            if (angle < 70 && stage === "up") {
-                stage = "down";
-                incrementReps();
-            }
-        }
-
         function trackCurls(landmarks) {
             const shoulder = landmarks[12];
             const elbow = landmarks[14];
@@ -370,7 +336,7 @@
             if (angle > 160) stage = "down";
             if (angle < 30 && stage === "down") {
                 stage = "up";
-                incrementReps();
+                incrementCounter();
             }
         }
 
@@ -386,38 +352,49 @@
                 stage = "up";
             } else if (stage === "up" && !leftHandAboveShoulder && !rightHandAboveShoulder) {
                 stage = "down";
-                incrementReps();
+                incrementCounter();
             }
         }
 
-        function incrementReps() {
+        function trackSquats(landmarks) {
+            const hip = landmarks[24];
+            const knee = landmarks[26];
+            const ankle = landmarks[28];
+            const angle = calculateAngle(hip, knee, ankle);
+
+            if (angle > 160) stage = "up";
+            if (angle < 70 && stage === "up") {
+                stage = "down";
+                incrementCounter();
+            }
+        }
+
+        function incrementCounter() {
             currentReps++;
-            updateProgress();
+            totalRepsCompleted++;
+            progressCircle.innerText = totalRepsCompleted;
+
+            const progressPercent = (totalRepsCompleted / totalReps) * 100;
+            progressBar.style.width = `${progressPercent}%`;
 
             if (currentReps >= repsPerSet) {
                 currentReps = 0;
                 currentSet++;
                 if (currentSet > sets) {
                     showCompletionPage();
-                } else {
-                    startRestTimer();
+                    return;
                 }
+                startRestCountdown(restTimeBetweenSets);
             }
         }
 
-        function startRestTimer() {
-            isResting = true; // Activate rest period
-            restTimerElement.style.display = 'block';
-            let timeLeft = restTime;
-            restCountdown.innerText = timeLeft;
-
+        function startRestCountdown(seconds) {
+            isResting = true;
             const restInterval = setInterval(() => {
-                timeLeft--;
-                restCountdown.innerText = timeLeft;
-                if (timeLeft <= 0) {
+                seconds--;
+                if (seconds <= 0) {
                     clearInterval(restInterval);
-                    restTimerElement.style.display = 'none';
-                    isResting = false; // Deactivate rest period and resume exercise tracking
+                    isResting = false;
                 }
             }, 1000);
         }
@@ -430,6 +407,7 @@
         function goToHome() {
             document.getElementById('completedPage').classList.remove('active');
             document.getElementById('question1').classList.add('active');
+            resetExercise(); 
         }
     </script>
 </body>
