--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,30 +29,31 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            text-align: center;
             padding: 20px;
         }
         .active {
             display: flex;
         }
         h1 {
-            font-size: 2rem;
+            font-size: 3rem;
             color: #0056b3;
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
             text-align: center;
         }
         label {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
             color: #333;
             text-align: center;
             width: 100%;
         }
         select, input, button {
-            font-size: 1.2rem;
-            margin: 0.5rem 0;
-            padding: 10px 15px;
+            font-size: 2rem;
+            margin: 1rem 0;
+            padding: 15px 20px;
             width: 80%;
-            max-width: 400px;
+            max-width: 600px;
             border-radius: 8px;
             border: none;
             outline: none;
@@ -72,50 +73,28 @@
         button:hover {
             background-color: #003e8a;
         }
-        /* Dynamic Island Styling */
-        .dynamic-island {
+        /* Countdown Timer Styling */
+        #countdown {
             position: absolute;
-            top: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #000000aa;
-            color: #fff;
-            width: 90%;
-            max-width: 400px;
-            height: 60px;
-            border-radius: 30px;
-            padding: 10px 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            font-size: 8rem;
+            color: #FF0000;
+            animation: fade 1s ease;
             z-index: 10;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
-        .dynamic-island .exercise-name {
-            font-size: 1.2rem;
-            margin-right: 10px;
-        }
-        .dynamic-island .reps-count {
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-        .circle-progress {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background: conic-gradient(#0056b3 0% 0%, #e0e0e0 0% 100%);
-            margin-left: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1rem;
-            color: #fff;
+        @keyframes fade {
+            from { opacity: 1; }
+            to { opacity: 0; }
         }
         /* Camera Page Styling */
         #video-container {
             position: relative;
-            width: 90%;
-            max-width: 400px;
-            aspect-ratio: 3/4;
-            margin-top: 80px;
+            width: 100%;
+            max-width: 800px;
+            aspect-ratio: 4/3;
+            margin-top: 10px;
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -127,21 +106,32 @@
             width: 100%;
             height: 100%;
         }
+        #counter {
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            font-size: 2rem;
+            color: #ffffff;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 15px;
+            border-radius: 8px;
+            z-index: 5;
+        }
         #status {
-            font-size: 1.5rem;
+            font-size: 2rem;
             color: #0056b3;
             text-align: center;
-            margin-top: 10px;
+            margin-top: 20px;
         }
         /* Progress Bar Styling */
         .progress-container {
-            width: 90%;
-            max-width: 400px;
-            height: 10px;
+            width: 100%;
+            max-width: 800px;
+            height: 25px;
             background-color: #e0e0e0;
-            border-radius: 5px;
+            border-radius: 12px;
             overflow: hidden;
-            margin-top: 10px;
+            margin-top: 20px;
         }
         .progress-bar {
             height: 100%;
@@ -149,9 +139,30 @@
             width: 0%;
             transition: width 0.3s ease;
         }
+        /* Exercise Completed Page */
+        .completed-message {
+            font-size: 3rem;
+            color: #28a745;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .home-button {
+            font-size: 1.5rem;
+            padding: 15px 30px;
+            background-color: #0056b3;
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .home-button:hover {
+            background-color: #003e8a;
+        }
     </style>
 </head>
 <body>
+    <!-- Page 1: Exercise Selection -->
     <div id="question1" class="page active">
         <h1>Select Your Exercise</h1>
         <label for="exercise">What exercise would you like to do?</label>
@@ -184,24 +195,23 @@
         <button onclick="startExercise()">Start Exercise</button>
     </div>
 
-    <!-- Exercise Tracking Page with Dynamic Island -->
+    <!-- Page 2: Exercise Tracking with Countdown -->
     <div id="exercisePage" class="page">
-        <div class="dynamic-island">
-            <span class="exercise-name" id="exerciseName">Squats</span>
-            <div class="circle-progress" id="progressCircle">0</div>
-            <span class="reps-count">Reps</span>
-        </div>
+        <h1>Exercise Tracker</h1>
+        <div id="countdown"></div>
         <div id="video-container">
+            <div id="counter">Set: 1 | Reps: 0</div>
             <video id="webcam" autoplay playsinline></video>
             <canvas id="output"></canvas>
         </div>
         <p id="status"></p>
+        <!-- Progress Bar -->
         <div class="progress-container">
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </div>
 
-    <!-- Exercise Completed Page -->
+    <!-- Page 3: Exercise Completed -->
     <div id="completedPage" class="page">
         <div class="completed-message">EXERCISE COMPLETED</div>
         <button class="home-button" onclick="goToHome()">Go to Home</button>
@@ -220,13 +230,13 @@
         const videoElement = document.getElementById('webcam');
         const canvasElement = document.getElementById('output');
         const canvasCtx = canvasElement.getContext('2d');
-        const exerciseNameElement = document.getElementById('exerciseName');
-        const progressCircle = document.getElementById('progressCircle');
+        const counterElement = document.getElementById('counter');
         const progressBar = document.getElementById('progress-bar');
+        const countdownElement = document.getElementById('countdown');
 
         let exercise, sets, repsPerSet, totalReps, totalRepsCompleted, currentSet, currentReps, stage;
         let restTimeBetweenSets;
-        let isResting = false;
+        let isResting = false; // Flag to control tracking during rest periods
 
         function resetExercise() {
             exercise = "";
@@ -238,7 +248,7 @@
             currentReps = 0;
             stage = null;
             isResting = false;
-            progressCircle.innerText = "0";
+            counterElement.innerText = `Set: 1 | Reps: 0`;
             progressBar.style.width = "0%";
         }
 
@@ -256,8 +266,23 @@
             document.getElementById('question4').classList.remove('active');
             document.getElementById('exercisePage').classList.add('active');
 
-            exerciseNameElement.innerText = exercise.charAt(0).toUpperCase() + exercise.slice(1);
-            initializeExerciseTracking();
+            startCountdown(5); // Start a 5-second countdown before beginning the exercise
+        }
+
+        function startCountdown(seconds) {
+            countdownElement.style.display = "block";
+            countdownElement.innerText = seconds;
+
+            const countdownInterval = setInterval(() => {
+                seconds--;
+                if (seconds > 0) {
+                    countdownElement.innerText = seconds;
+                } else {
+                    clearInterval(countdownInterval);
+                    countdownElement.style.display = "none";
+                    initializeExerciseTracking();
+                }
+            }, 1000);
         }
 
         function initializeExerciseTracking() {
@@ -303,6 +328,8 @@
         }
 
         function onPoseResults(results) {
+            if (isResting) return; // Skip processing during rest period
+
             canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
             if (results.poseLandmarks) {
                 drawConnectors(canvasCtx, results.poseLandmarks, POSE_CONNECTIONS,
@@ -328,6 +355,8 @@
         }
 
         function trackCurls(landmarks) {
+            if (isResting) return; // Skip tracking during rest period
+
             const shoulder = landmarks[12];
             const elbow = landmarks[14];
             const wrist = landmarks[16];
@@ -341,6 +370,8 @@
         }
 
         function trackJumpingJacks(landmarks) {
+            if (isResting) return; // Skip tracking during rest period
+
             const leftShoulder = landmarks[11];
             const rightShoulder = landmarks[12];
             const leftWrist = landmarks[15];
@@ -357,6 +388,8 @@
         }
 
         function trackSquats(landmarks) {
+            if (isResting) return; // Skip tracking during rest period
+
             const hip = landmarks[24];
             const knee = landmarks[26];
             const ankle = landmarks[28];
@@ -372,7 +405,7 @@
         function incrementCounter() {
             currentReps++;
             totalRepsCompleted++;
-            progressCircle.innerText = totalRepsCompleted;
+            counterElement.innerText = `Set: ${currentSet} | Reps: ${currentReps}`;
 
             const progressPercent = (totalRepsCompleted / totalReps) * 100;
             progressBar.style.width = `${progressPercent}%`;
@@ -384,17 +417,23 @@
                     showCompletionPage();
                     return;
                 }
+                // Start rest countdown after completing each set
                 startRestCountdown(restTimeBetweenSets);
             }
         }
 
         function startRestCountdown(seconds) {
-            isResting = true;
+            isResting = true; // Set resting flag to prevent counting during rest
+            countdownElement.style.display = "block";
+            countdownElement.innerText = `Rest: ${seconds}`;
+
             const restInterval = setInterval(() => {
                 seconds--;
+                countdownElement.innerText = `Rest: ${seconds}`;
                 if (seconds <= 0) {
                     clearInterval(restInterval);
-                    isResting = false;
+                    countdownElement.style.display = "none";
+                    isResting = false; // Resume tracking after rest period
                 }
             }, 1000);
         }
@@ -411,4 +450,4 @@
         }
     </script>
 </body>
-</html>
+</html> 
